# TTSegTool

./: CMakeLists.txt
TTSegTool/: CMakeLists.txt  EyelidSegPreProcess.py  TTSegTool.py
TTSegTool/CommonUtilities/: EntropionSegPreProcess.py  EyelidSegPreProcess.py  utility.py
TTSegTool/Resources/UI/: TTSegTool.ui
